src/objects/QTO_Customer_Document_Agreement_Line__c.object
<CustomObject>
    <fields>
        <fullName>QTO_Agreement_Line_Item__c</fullName>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipName>Customer_Document_Agreement_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QTO_CDLIA_Match_Contracted_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Match Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_CDLIA_Matched_Contracted_Quantity__c</fullName>
        <label>Matched Contracted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTO_CDLIA_Matching__c</fullName>
        <formula>IF( QTO_CDLIA_Match_Contracted_Comment__c = &apos;Yes&apos;,IMAGE(&quot;/resource/Correct&quot;, &quot;Yes&quot;),IF(QTO_CDLIA_Match_Contracted_Comment__c = &apos;No&apos; ,IMAGE(&quot;/resource/Wrong&quot;, &quot;No&quot;),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matching</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTO_Customer_Document_Line_Items__c</fullName>
        <label>Customer Document Line Items</label>
        <referenceTo>Customer_Document_Line_Items__c</referenceTo>
        <relationshipName>Customer_Document_Agreement_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CDLI Associations to Agreement LI</label>
    <nameField>
        <displayFormat>CDAAL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CDLI Associations to Agreement LI</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>